# vat5jy_DS5111su24_lab_01

./: README.md  makefile  my_functions.py  pyproject.toml  requirements.txt
.github/workflows/: validations.yml
database_lab/: Lab_1_Design_Answers.txt  courses.csv  data_clean_excel.xlsx  instructors.csv  learning_outcomes.csv  teaching_assignments.csv  teaching_assignments_instructors.csv  terms.csv
env/: pyvenv.cfg
src/pkg_vat5jy/: __init__.py  my_functions.py
tests/: test_clean_text.py  test_count_words.py  test_tokenizer.py
