[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pkg_vat5jy"
version = "0.0.1"
authors = [
  { name="Victor", email="email_not_included" },
]
description = "Test package for linux class"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/"
Issues = "https://github.com/"
